--- a/PortofolioWebFix.html
+++ b/PortofolioWebFix.html
@@ -69,7 +69,7 @@
             text-align: center;
             padding: 2rem;
 
-            background: url('Gemini_Generated_Image_30w2k830w2k830w2.png') no-repeat center center/cover;
+            background: url('bgphotome.png') no-repeat center center/cover;
             background-size: 70%;
             position: relative;
         }
@@ -290,3 +290,4 @@
 </script>
 </body>
 </html>
+
