--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
 <section class="about" id="about">
     <h2>About Me</h2>
-    <p>I am a passionate developer creating modern and responsive websites. With a strong foundation in web technologies, I love to design sleek user interfaces and seamless user experiences.</p>
+    <p>I’m a Computer Science student at IPB University who enjoys exploring new things, especially in technology. I aspire to become a game developer or software developer, combining creativity and technical skills to create meaningful experiences.</p>
 </section>
 
 <section class="portfolio" id="portfolio">
@@ -290,5 +290,6 @@
 </script>
 </body>
 </html>
+
 
 
